parametrized tests for every user role